# mcp-server

./: .dockerignore  .env.example  .markdown-link-check.json  .pre-commit-config.yaml  LICENSE  Makefile  README.md  commitlint.config.mjs  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
client/: Dockerfile  main.py  pyproject.toml
docs/: index.md
docs/implementation/: auditing.md  index.md  keycloak.md  repository.md
docs/roadmap/: 01-fastmcp.md  02-repository-pattern.md  03-keycloak-scopes.md  04-auditing.md
docs/stylesheets/: extra.css
docs/topics/: agent-lifecycle.md  audit-compliance.md  database-architecture.md  infrastructure-operations.md  security-access-control.md
keycloak/: realm-export.json
server/: Dockerfile  pyproject.toml
server/src/server/: app.py  audit.py  auth.py
server/src/server/repository/: __init__.py  base.py  memory.py  sql.py
server/tests/: test_tool.py
