# Root configuration for project-wide tooling (Ruff) and the documentation site.
# server/ and client/ remain standalone packages; this root is not itself packaged.

[project]
name = "mcp-server-demo"
version = "0.0.0"
requires-python = ">=3.11"

[tool.uv]
package = false

[dependency-groups]
docs = [
    "mkdocs-material>=9.5",
]

[tool.ruff]
target-version = "py311"
line-length = 110

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (Import-Sortierung)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
