[project]
name = "server"
version = "0.1.0"
description = "MCP server exposing database access as MCP tools for AI agents"
authors = [
    { name = "Marcel Kennert-Diaz", email = "marcel.kennert@gmx.de" }
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.4.2",
    "sqlalchemy>=2.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
